--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
       return new Promise(resolve => setTimeout(resolve, ms));
     }
 
+    function isBase64(str) {
+      try {
+        return btoa(atob(str)) === str;
+      } catch (err) {
+        return false;
+      }
+    }
+
     async function fetchWithExponentialBackoff(url, retries = 5, delayTime = 1000) {
       let attempt = 0;
       while (attempt < retries) {
@@ -69,7 +77,27 @@
       throw new Error('Max retries reached');
     }
 
-    async function loadImageAsTexture(url) {
+    async function loadImageAsTexture(base64) {
+      if (!isBase64(base64)) {
+        throw new Error('Invalid Base64 string');
+      }
+
+      const img = new Image();
+      img.src = `data:image/png;base64,${base64}`;
+      await new Promise((resolve) => {
+        img.onload = resolve;
+      });
+
+      const canvas = document.createElement('canvas');
+      canvas.width = img.width;
+      canvas.height = img.height;
+      const ctx = canvas.getContext('2d');
+      ctx.drawImage(img, 0, 0);
+
+      return canvas.toDataURL('image/png');
+    }
+
+    async function loadImageAsTexture1(url) {
       const response = await fetchWithExponentialBackoff(url);
       const blob = await response.blob();
       const imgType = blob.type;
